--- a/style.css
+++ b/style.css
@@ -287,7 +287,12 @@ body {
     background-image: radial-gradient(rgba(30, 23, 23, 0.2) 1px, transparent 2px);
     background-size: 20px 20px;
     border-radius: unset !important;
-    color: black !important;
+}
+.bg-card-black {
+    background-image: url('https://www.transparenttextures.com/patterns/carbon-fibre.png');
+    background-size: 20px 20px;
+    border-radius: unset !important;
+    outline: black 1px solid;
 }
 
 .white-btn {
